completed initial creation of calculator UI

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+    <div class="calculatorContainer">
+        <div class="display">10000</div>
+        <div class="buttonsFirstRow btnRow">
+            <button id="clearBtn">Clear</button>
+            <button id="equalBtn">=</button>
+            <button id="zeroBtn">0</button>
+            <button id="divideBtn">/</button>
+        </div>
+        <div class="buttonsSecondRow btnRow">
+            <button id="sevenBtn">7</button>
+            <button id="eightBtn">8</button>
+            <button id="nineBtn">9</button>
+            <button id="multiplyBtn">x</button>
+        </div>
+        <div class="buttonsThirdRow btnRow">
+            <button id="fourBtn">4</button>
+            <button id="fiveBtn">5</button>
+            <button id="sixBtn">6</button>
+            <button id="subtractBtn">-</button>
+        </div>
+        <div class="buttonsFourthRow btnRow">
+            <button id="oneBtn">1</button>
+            <button id="twoBtn">2</button>
+            <button id="threeBtn">3</button>
+            <button id="additionBtn">+</button>
+        </div>
+    </div>
     
 </body>
 </html>
